fixed about page skill list, aligns with the rest of the text with wodth 100%

--- a/src/components/css/about.css
+++ b/src/components/css/about.css
@@ -23,6 +23,7 @@
 }
 
 #main-about-skill-list {
+    width: 100%;
     margin-bottom: 10vh;
 }
 
